--- a/.github/workflows/Terraform-Plan.yml
+++ b/.github/workflows/Terraform-Plan.yml
@@ -22,9 +22,9 @@ jobs:
     runs-on: ubuntu-latest
     # environment variables
     env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY_ID }}
-      AWS_REGION: 'us-eas-1'
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: 'us-east-1'
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
