--- a/.github/workflows/tcs.yml
+++ b/.github/workflows/tcs.yml
@@ -1,26 +1,40 @@
-steps:
-  - name: Accurics GitHub Action
-  # You may pin to the exact commit or the version.
-  # uses: accurics/accurics-action@2ef358587ac0d694210cc59d5b6fc48813a40ea4
-    uses: accurics/accurics-action@v1.3.1
-    with:
-    # 
-    debug-mode: # optional
-    # The Terraform version used to process the files in this repository (ex: 0.12.26). (default=latest)
-    terraform-version: # optional, default is latest
-    # A list of directories to scan within this repository separated by a space. (default=current directory)
-    directories: # optional, default is .
-    # Terraform plan arguments
-    plan-args: # default is 
-    # Environment ID for Accurics to scan
-    env-id: # default is 
-    # Accurics CLI Application Token ID
-    app-id: # default is 
-    # Repository Location
-    repo: # optional, default is __empty__
-    # Accurics Application URL
-    url: # optional, default is https://app.accurics.com
-    # Allows Accurics to fail the build when violations are found (default=true)
-    fail-on-violations: # optional, default is true
-    # Allows Accurics to fail the build when any errors are encountered (default=true)
-    fail-on-all-errors: # optional, default is true
+# This is a basic workflow to help you get started with Actions
+
+name: CI
+
+# Controls when the workflow will run
+on:
+  # Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Required to checkout the files in the current repository
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Accurics
+        uses: accurics/accurics-action@v2.25
+        id: accurics
+        env: 
+          # Required by Terraform
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        with:
+          # Required by Accurics
+          app-id: ${{ secrets.ACCURICS_APP_ID }}
+          env-id: ${{ secrets.ACCURICS_ENV_ID }}
+          url: https://cloud.tenable.com/cns
+          # Optional args
