--- a/.github/workflows/tcs.yml
+++ b/.github/workflows/tcs.yml
@@ -37,4 +37,8 @@ jobs:
           app-id: ${{ secrets.ACCURICS_APP_ID }}
           env-id: ${{ secrets.ACCURICS_ENV_ID }}
           url: https://cloud.tenable.com/cns
-          # Optional args
+              # Fail the build when violations are found:
+          fail-on-violations: true
+          # Fail the build on all errors
+          fail-on-all-errors: false
+         
